--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^7.4.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
