--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^7.4.4",
     "next": "13.5.6",
