--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.25",
     "@reduxjs/toolkit": "^2.1.0",
     "bcrypt": "^5.1.1",
+    "daisyui": "^4.6.1",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
