--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
